<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">CalcESTv1</string>
    <string name="menu_settings">Feedback</string>
    <string name="headline">Berechnung der Einkommensteuer</string>
    <string name="steuerjahr">Steuerjahr:</string>
    <string name="button_weiter">weiter</string>
    <string name="personenkreis">kinderlose, Gehaltsempfänger</string>
    <string name="unterlagen">Monatsgehaltsschein, Spendenbescheinigungen, Versicherungsbescheinigungen, Krankheitskosten, Belege fuer Werbungskosten</string>
    <string name="angabenGehalt"><u>Angaben Gehaltsschein</u></string>
    <string name="bruttoGehalt">Bruttogehalt:</string>
    <string name="lohnSteuer">Lohnsteuer:</string>
    <string name="solZ">Soli-Zuschlag:</string>
    <string name="krankenVers">KrankenVers.:</string>
    <string name="rentenVers">Rentenvers.:</string>
    <string name="pflegeVers">Pflegevers.:</string>
    <string name="arbeitslosenVers">Arbeitslosenvers.:</string>
    <string name="angabeWK"><u>Angaben Werbungskosten</u></string>
    <string name="entfernungWA">EntfernungsKM:</string>
    <string name="arbeitstage">Arbeitstage/Jahr:</string>
    <string name="spendenGezahlt">Spenden:</string>
    <string name="arbeitsmittelGezahlt">Arbeitsmittel:</string>
    <string name="telefonkostenGezahlt">Telefonkosten:</string>
    <string name="angabenVorsorge"><u>Angaben Vorsorge</u></string>
    <string name="angabenAGB"><u>Angaben außergewöhnliche Belastung</u></string>
    <string name="krankheitskostenGezahlt">Krankheitskosten:</string>
    <string name="auswertung"><u>Auswertung</u></string>
    <string name="button_auswertung">Berechnung</string>
    <string name="button_maps">Google Maps</string>
    <string name="button_WK_ABC">WK ABC</string>
    <string name="ruerupVers">Rürup-Vers.:</string>
    <string name="riesterVers">Riester-Vers.:</string>
    <string name="buVers">BU-Vers.:</string>
    <string name="unfallVers">Unfall-Vers.:</string>
    <string name="haftpflichtVers">Haftpflicht-Vers.:</string>
    <string name="lvMitKap">Lebens-Vers.:</string>
    <string name="lvMitKap_2">mit Kaptalwahlrecht</string>
    <string name="lvOhneKap">Lebens-Vers.:</string>
    <string name="lvOhneKap_2">ohne Kapitalwahlrecht</string>
    <string name="createfileact"><u>Erstellung Auswertungsdatei</u></string>
    <string name="createFolder"><u>Erstellung Auswertungsordner</u></string>
    <string name="createFile"><u>Erstellung Auswertungsdatei</u></string>
    <string name="buttonFolder">Folder</string>
    <string name="buttonFile">File</string>
    <string name="personenkreis2"><u>Personenkreis:</u></string>
    <string name="unterlagen2"><u>benoetige Unterlagen:</u></string>
    <string name="etFolder">/sdcard/Steuerberechnung/</string>
    <string name="etFile">/sdcard/Steuerberechnung/Auswertung.txt/</string>
    <string name="hinweis"><u>Hinweis:</u></string>
    <string name="hinweis2">Bitte Kommazahlen verwenden!</string>
    <string name="hinweis3">ausser bei Steuerjahr, Arbeitstage</string>
    <string name="createFolder2">Nur bei der ersten Berechnung notwendig!</string>
    <string name="angabenHnDL"><u>Angaben haushaltsnahe Aufwendungen</u></string>
    <string name="hnDl1">Kosten Haushaltskraft:</string>
    <string name="hnDl1_2">Anstellung auf Minijob-Basis</string>
    <string name="hnDl2">Kosten Haushaltskraft:</string>
    <string name="hnDl2_2">ohne Anstellungsverhaeltnis</string>
    <string name="hnDl3">Handwerkerleistungen:</string>
    <string name="hnDl4">Steuerabzug nur bei unbarer Bezahlung! </string>
    <string name="menu_settings_2">Credits</string>
    <string name="splashScreen">"Am schwersten auf der Welt zu verstehen ist die Einkommensteuer."</string>
    <string name="splashScreen2">Albert Einstein</string>
    <string name="splashScreen3">(1879 - 1955)</string>
    <string name="button_back">zurueck</string>
    <string name="credits2">Open Source:</string>
   
      

</resources>