<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background_splash">

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/splashScreen"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFD8D8D8"
        android:textSize="@dimen/highTest" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/splashScreen2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFD8D8D8"
        android:textSize="@dimen/midHighTest" />

    <TextView
        android:id="@+id/tvSplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/splashScreen3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFD8D8D8"
        android:textSize="@dimen/midHighTest" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp" />

</LinearLayout> 