<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView02"
android:layout_width="fill_parent"
android:layout_height="fill_parent" >

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="790dp" >

    <EditText
        android:id="@+id/etLine1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:editable="false"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/etLine3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLine2"
        android:layout_below="@+id/etLine2"
        android:layout_marginTop="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/etLine4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLine3"
        android:layout_below="@+id/etLine3"
        android:layout_marginTop="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/etLine5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLine4"
        android:layout_below="@+id/etLine4"
        android:layout_marginTop="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/etLine2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLine1"
        android:layout_below="@+id/etLine1"
        android:layout_marginTop="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/etLine6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLine5"
        android:layout_below="@+id/etLine5"
        android:layout_marginTop="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/etLine7"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLine6"
        android:layout_below="@+id/etLine6"
        android:layout_marginTop="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/etLine8"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLine7"
        android:layout_below="@+id/etLine7"
        android:layout_marginTop="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/etLine9"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLine8"
        android:layout_below="@+id/etLine8"
        android:layout_marginTop="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/etLine10"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLine9"
        android:layout_below="@+id/etLine9"
        android:layout_marginTop="10dp"
        android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLine10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/createFolder" />

    <EditText
        android:id="@+id/txtCreateFolder"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLine10"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/button7Act2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCreateFolder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/buttonFolder" 
        android:onClick="btnCreateFolder"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7Act2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/createFile" />

    <EditText
        android:id="@+id/txtFileDir"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCreateFolder"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text" >

    </EditText>

    <Button
        android:id="@+id/button7Act3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button7Act2"
        android:layout_below="@+id/txtFileDir"
        android:layout_marginTop="5dp"
        android:text="@string/buttonFile"
        android:onClick="btnCreateFile" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLine1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:text="@string/createfileact"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button7Act1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/buttonData" 
        android:onClick="HoleDaten"/>

</RelativeLayout>

</ScrollView>